<resources>
    <string name="app_name">Погода на стероидах</string>

    <!-- Погодные данные -->
    <string name="description">Погода: </string>
    <string name="temp">Температура: </string>
    <string name="feels_like">Ощущается как: </string>
    <string name="temp_min">Мин. температура: </string>
    <string name="temp_max">Макс. температура: </string>
    <string name="pressure">Давление: </string>
    <string name="humidity">Влажность: </string>
    <string name="speed">Скорость ветра: </string>
    <string name="time_and_date">Дата и время:</string>
    <string name="date">Дата:</string>
    <string name="time">Время:</string>

    <!-- Для состояния загрузки -->
    <string name="loading">Идет получение данных погоды</string>
    <string name="error">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>

    <!-- Для приветствия пользователей -->
    <string name="good_morning">Доброе утро, </string>
    <string name="good_day">Добрый день, </string>
    <string name="good_evening">Добрый вечер, </string>
    <string name="good_night">Доброй ночи, </string>
    <string name="user">пользователь</string>
    <string name="good_everything">Доброго времени суток</string>

    <!-- Для фрагмента настроек -->
    <string name="enter_your_name_hint">Введите своё имя сюда</string>
    <string name="enter_your_name_text_view">Введите своё имя чтобы приложение знало, как к вам обращаться</string>
    <string name="become_incognito">Стать инкогнито</string>
    <string name="app_launch_count">Приложение было запущено столько раз:</string>
    <string name="app_time_count">Столько времени проведено в приложении:</string>

    <!-- Ключи для SharedPreferences -->
    <string name="user_name_key">user_name_key</string>
    <string name="launch_count_key">launch_count_key</string>
    <string name="time_count_key">time_count_key</string>
    <string name="is_can_greet_key">is_can_greet_key</string>

    <!-- Подписи нижнего меню -->
    <string name="weather_now">Сейчас</string>
    <string name="five_days_weather_forecast">5 дней</string>
    <string name="air_pollution">Воздух</string>
    <string name="air_pollution_forecast">Прогноз</string>
    <string name="settings">Настройки</string>

    <!-- Данные по загрязнению воздуха -->
    <string name="air_rate">Общий рейтинг загрязнения воздуха:</string>
    <string name="co_rate">Концентрация CO (угарный газ):</string>
    <string name="no_rate">Концентрация NO (монооксид азота):</string>
    <string name="no2_rate">Концентрация NO₂ (диоксид азота):</string>
    <string name="o3_rate">Концентрация O₃ (озон):</string>
    <string name="so2_rate">Концентрация SO₂ (диоксид серы):</string>
    <string name="pm25_rate">Концентрация PM₂.₅ (мелкие примеси):</string>
    <string name="pm10_rate">Концентрация PM₁₀ (крупные примеси):</string>
    <string name="nh3_rate">Концентрация NH₃ (аммиак):</string>
</resources>