<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".ui.airpollution.AirPollutionFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_air_rate"
        style="@style/recyclerMainItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_co"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/co_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_air_rate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_no"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_co" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_no2"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no2_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_no" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_o3"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o3_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_no2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_so2"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so2_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_o3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_pm2_5"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm25_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_so2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_pm10"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm10_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_pm2_5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_nh3"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nh3_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_pm10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/air_pollution_current_loading"
        style="@style/recyclerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_nh3" />

    <ProgressBar
        android:id="@+id/air_pollution_current_progress_bar"
        style="@style/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_pollution_current_loading" />


</androidx.constraintlayout.widget.ConstraintLayout>