<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/recyclerCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_air_rate"
            style="@style/recyclerMainItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_time"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_air_rate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_co"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/co_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_no"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_co" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_no2"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no2_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_no" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_o3"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o3_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_no2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_so2"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so2_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_o3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_pm2_5"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm25_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_so2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_pm10"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm10_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_pm2_5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/air_pollution_forecast_nh3"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nh3_rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_pollution_forecast_pm10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>