<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/recyclerCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/weather_forecast_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_weather_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weather_forecast_time"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weather_forecast_description"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_forecast_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weather_forecast_temp"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_forecast_description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weather_forecast_feels_like"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            app:layout_constraintStart_toEndOf="@id/weather_forecast_temp"
            app:layout_constraintTop_toBottomOf="@id/weather_forecast_description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weather_forecast_pressure"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_forecast_temp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weather_forecast_humidity"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            app:layout_constraintStart_toEndOf="@id/weather_forecast_pressure"
            app:layout_constraintTop_toBottomOf="@id/weather_forecast_temp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weather_forecast_speed"
            style="@style/recyclerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_forecast_pressure" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>